<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/xiaomi"
        android:textAllCaps="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/xiaomi_desc"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/oppo"
        android:textAllCaps="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/oppo_desc"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:padding="@dimen/_5sdp"
        android:text="@string/not_found_solution"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_contact_us"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_3sdp"
        android:background="@drawable/sel_blue"
        android:foreground="@drawable/ripple_effect"
        android:text="@string/contact_us"
        android:textColor="@android:color/white" />

</LinearLayout>