<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/incoming_ring_time"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_12ssp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_ring_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/white_bg_gray_border"
            android:digits="0123456789"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:padding="@dimen/_2sdp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/intro_ring_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/que_mark"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/swContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/send_sms_to_only_contacts"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_what_is_will_call_u"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/what_is_will_call_u"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_rate_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/rate_us"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/share_app"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/contact_us"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_app_not_working"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/app_not_working_"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/privacy_policy"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_12ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_e6e6e6" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/_10ssp"
        tools:text="version" />
</LinearLayout>