<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp">

            <View
                android:layout_width="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/dark_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_demo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:src="@drawable/profile_name" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/et_bottom_line"
                android:hint="@string/profile_name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:src="@drawable/time" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/et_sart_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/et_bottom_line"
                android:hint="@string/start_time"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/_12ssp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/dash"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/et_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/et_bottom_line"
                android:hint="@string/end_time"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_week_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:scrollbars="vertical" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/rounded_corner_with_border"
            android:gravity="start"
            android:hint="@string/enter_message"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:padding="@dimen/_3sdp"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/sel_blue"
                android:foreground="@drawable/ripple_effect"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_3sdp"
                android:background="@drawable/sel_blue"
                android:foreground="@drawable/ripple_effect"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>